force-app/main/default/objects/Account/fields/Claims_History__c.field-meta.xml
<CustomField>
    <fullName>Claims_History__c</fullName>
    <description>Household claims history summary</description>
    <label>Claims History</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>