force-app/main/default/objects/Account/fields/Household_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Household_Lifetime_Value__c</fullName>
    <description>Total household lifetime value across all policies</description>
    <label>Household Lifetime Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>