force-app/main/default/objects/Account/fields/Spouse_Name__c.field-meta.xml
<CustomField>
    <fullName>Spouse_Name__c</fullName>
    <description>Name of spouse in household</description>
    <label>Spouse Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>